# staticsitegenerator

./: pyproject.toml  test.sh
src/: all_test.py  htmlnode.py  htmlnode_test.py  inline_markdown.py  inline_markdown_test.py  leafnode.py  leafnode_test.py  main.py  parentnode.py  parentnode_test.py  test_htmlnode.py  test_leafnode.py  test_textnode.py  textnode.py  textnode_test.py
